--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,12 @@
-@tailwind base;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
 
 /* :root {
   --foreground-rgb: 0, 0, 0;
